[2022-37] Light refactoring of code_ranking_tier.py - Added more in-line documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-
 # Core packages
-matplotlib
-numpy
-pandas
+beartype
+loguru
 awswrangler
 boto3
-loguru
+numpy
+pandas
+
+# Plotting
+matplotlib
 venn
