--- a/.env-example
+++ b/.env-example
@@ -2,5 +2,6 @@ BFS_CASES_DB_URL=[URL]
 BFS_CASES_DB_USER=[USERNAME]
 BFS_CASES_DB_PASSWORD=[PASSWORD]
 BFS_CASES_DB_PORT=[PORT]
+AWS_REGION=[AWS_REGION]
 AWS_ACCESS_KEY_ID=[AWS_KEY]
 AWS_SECRET_ACCESS_KEY=[ACCESS_KEY]
