[2022-40] Updated docker-compose.yml to install the requirements.txt file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  jupyter_notebook:
+  code_scout_jupyter:
     image: jupyter/datascience-notebook:aarch64-lab-3.4.7
     volumes:
       - type: bind
@@ -10,3 +10,8 @@ services:
     ports:
       - "8888:8888"
     working_dir: "/home/jovyan/work"
+    command: >
+       sh -c "python3 -m pip install --upgrade pip &&
+             export PIP_CONSTRAINT=constraints.txt &&
+             pip3 install -r requirements.txt &&
+             '/usr/local/bin/start.sh' jupyter lab"
