--- a/.run/Dockerfile.run.xml
+++ b/.run/Dockerfile.run.xml
@@ -2,6 +2,7 @@
   <configuration default="false" name="Dockerfile" type="docker-deploy" factoryName="dockerfile" server-name="Docker">
     <deployment type="dockerfile">
       <settings>
+        <option name="imageTag" value="code_scout_python" />
         <option name="containerName" value="code_scout_python" />
         <option name="sourceFilePath" value="Dockerfile" />
       </settings>
