--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,10 @@ services:
     ports:
       - "8888:8888"
     working_dir: "/home/jovyan/work"
+    user: root
     command: >
-       sh -c "python3 -m pip install --upgrade pip &&
-             pip3 install -r requirements.txt -c constraints.txt &&
-             '/usr/local/bin/start.sh' jupyter lab --NotebookApp.token='' --NotebookApp.password=''"
+       sh -c "
+          sudo apt-get update &&
+          sudo apt-get --yes install openjdk-8-jdk &&
+          python3 -m pip install --upgrade pip && pip3 install -r requirements.txt -c constraints.txt &&
+          '/usr/local/bin/start.sh' jupyter lab --NotebookApp.token='' --NotebookApp.password=''"
