--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,4 @@ BFS_CASES_DB_PORT=[PORT]
 AWS_REGION=[AWS_REGION]
 AWS_ACCESS_KEY_ID=[AWS_KEY]
 AWS_SECRET_ACCESS_KEY=[ACCESS_KEY]
+AIMEDIC_GROUPER_VERSION=[e.g. 1.0.5]
