--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,4 @@ services:
           aws configure set default.region $AWS_REGION &&
           mkdir -p resources/jars/ &&
           aws codeartifact get-package-version-asset --domain aimedic --domain-owner 264427866130 --repository aimedic --format maven --namespace ch.aimedic --package aimedic-grouper_2.12 --package-version ${AIMEDIC_GROUPER_VERSION} --asset aimedic-grouper-assembly-${AIMEDIC_GROUPER_VERSION}.jar resources/jars/aimedic-grouper-assembly.jar &&
-          '/usr/local/bin/start.sh' jupyter lab --NotebookApp.token='' --NotebookApp.password=''"
+          '/usr/local/bin/start.sh' jupyter lab --ServerApp.token='' --ServerApp.password=''"
