--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,12 @@ definitions:
           - pipe: sonarsource/sonarcloud-scan:1.2.2
             variables:
               SONAR_TOKEN: ${SONAR_TOKEN}
+    -step: &test
+        name: Unit Tests
+        script:
+          - apk add --no-cache py-pip bash
+          - pip install --no-cache-dir docker-compose
+          - docker-compose -v
 pipelines:
   default:
-    - step: *sonar
+#    - step: *sonar
