--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ options:
   max-time: 60
   docker: true
 
-image: docker:stable
+image: alpinelinux/docker-compose
 
 definitions:
   steps:
@@ -17,8 +17,6 @@ definitions:
     - step: &test
         name: Unit Tests
         script:
-          - apk add --no-cache py-pip bash
-          - pip install --no-cache-dir docker-compose
           - docker-compose -v
 pipelines:
   default:
