--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   code_scout_python:
     build:
       context: .
-      dockerfile: Dockerfile_PAOLO
+      dockerfile: Dockerfile
       args:
         AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
         AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
