--- a/.run/Dockerfile.run.xml
+++ b/.run/Dockerfile.run.xml
@@ -3,7 +3,24 @@
     <deployment type="dockerfile">
       <settings>
         <option name="containerName" value="" />
-        <option name="sourceFilePath" value="" />
+        <option name="portBindings">
+          <list>
+            <DockerPortBindingImpl>
+              <option name="containerPort" value="8888" />
+              <option name="hostPort" value="8888" />
+            </DockerPortBindingImpl>
+          </list>
+        </option>
+        <option name="showCommandPreview" value="true" />
+        <option name="sourceFilePath" value="Dockerfile" />
+        <option name="volumeBindings">
+          <list>
+            <DockerVolumeBindingImpl>
+              <option name="containerPath" value="/home/jovyan/work" />
+              <option name="hostPath" value="$PROJECT_DIR$/" />
+            </DockerVolumeBindingImpl>
+          </list>
+        </option>
       </settings>
     </deployment>
     <method v="2">
