--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,11 +14,28 @@ definitions:
           - pipe: sonarsource/sonarcloud-scan:1.2.2
             variables:
               SONAR_TOKEN: ${SONAR_TOKEN}
-    - step: &test
-        name: Unit Tests
+    - step: &build-test-env
+        name: Build Bitbucket Test environment
+        services:
+          - docker
         script:
-          - docker build -t code-scout-python --build-arg AIMEDIC_GROUPER_VERSION=$AIMEDIC_GROUPER_VERSION --build-arg AWS_REGION=$AWS_REGION --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY .
-          - docker run  -p 8888:8888 -v `pwd`:/home/jovyan/work code-scout-python
+          - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+          - docker build -t aimedicch/code-scout-python-bitbucket-pipeline:latest .
+          - docker push aimedicch/code-scout-python-bitbucket-pipeline:latest
+    - step: &test
+        size: 2x
+        name: Unit Tests
+        image:
+          name: aimedicch/code-scout-python-bitbucket-pipeline:latest
+          username: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_PASSWORD
+          email: $DOCKER_HUB_EMAIL
+        script:
+          - coverage run -m unittest discover test/ --verbose
+          - coverage xml
+        artifacts:
+          - coverage.xml
 pipelines:
   default:
+    - step: *build-test-env
     - step: *test
