[2022-44] Adapt pipeline to run in dev,main & pull-requests

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -36,7 +36,13 @@ definitions:
             variables:
               SONAR_TOKEN: ${SONAR_TOKEN}
 pipelines:
-  default:
-    - step: *build-test-env
-    - step: *test
-    - step: *sonar
+  pull-requests:
+    '**':
+      - step: *build-test-env
+      - step: *test
+      - step: *sonar
+  branches:
+    '{develop,master,main}':
+      - step: *build-test-env
+      - step: *test
+      - step: *sonar
