[2022-46] Fixed bitbucket-pipelines.yml

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,7 @@ definitions:
           - docker
         script:
           - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
-          - docker build -t aimedicch/code-scout-python-bitbucket-pipeline:latest --build-arg AIMEDIC_GROUPER_VERSION=$AIMEDIC_GROUPER_VERSION --build-arg AWS_REGION=$AWS_REGION --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY .
+          - docker build -t aimedicch/code-scout-python-bitbucket-pipeline:latest --build-arg AWS_REGION=$AWS_REGION --build-arg AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID --build-arg AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY .
           - docker push aimedicch/code-scout-python-bitbucket-pipeline:latest
     - step: &test
         size: 2x
