--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-.idea
-resources/jars
-src/revised_case_normalization/raw_data
 .env
+.idea
+
+resources/data
+resources/features
+resources/jars
+
+results
 logs
