--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core packages
+python-crfsuite
 scikit-learn
 beartype
 loguru
@@ -13,6 +14,7 @@ srsly
 pyhumps
 tqdm
 gpytorch
+dataprep
 
 # Plotting
 matplotlib
